kubernetes/pibloom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pibloom-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    # - host: dcpi.ddns.net
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pibloom-web
                port:
                  number: 8080
